Support iteration for all vector types and implementations. Use iteration for all vector methods, rather than serial-get. Eliminate Prev*VectorColumnWrappers.